signup consent is updated and icon alignment fix

--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -69,7 +69,7 @@ figcaption {
   font-family: 'Material Symbols Outlined';
   font-size: 1em; /* Preferred icon size */
   display: inline-block;
-  vertical-align: calc(1ex - 0.6cap + -0.1em);
+  vertical-align: -0.1em;
   font-variation-settings:
     'FILL' 1,
     'wght' 700,
